kubernetes/manifests/forgejo.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  namespace: forgejo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo-app-deployment-c84ff3e1
  namespace: forgejo
spec:
  minReadySeconds: 0
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      cdk8s.io/metadata.addr: forgejo-app-deployment-c88e6896
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        cdk8s.io/metadata.addr: forgejo-app-deployment-c88e6896
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: APP_NAME
              value: Code
            - name: FORGEJO__server__SSH_LISTEN_PORT
              value: "2222"
            - name: FORGEJO__server__ROOT_URL
              value: https://code.us-drig-1.drigs.org/
            - name: FORGEJO__server__DOMAIN
              value: code.us-drig-1.drigs.org
            - name: FORGEJO__server__SSH_DOMAIN
              value: code.us-drig-1.drigs.org
            - name: FORGEJO__service__DISABLE_REGISTRATION
              value: "true"
            - name: FORGEJO__database__DB_TYPE
              value: postgres
            - name: FORGEJO__metrics__ENABLED
              value: "true"
            - name: FORGEJO__database__HOST
              value: forgejo-db-c881dbc4-rw
            - name: FORGEJO__database__NAME
              value: forgejo
            - name: FORGEJO__database__USER
              value: forgejo
            - name: FORGEJO__database__PASSWD
              valueFrom:
                secretKeyRef:
                  key: password
                  name: forgejo-db-secret-c87e89ad
          image: codeberg.org/forgejo/forgejo:10.0.0-rootless
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 10
            initialDelaySeconds: 200
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          name: forgejo
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 2222
              name: ssh
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/healthz
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 200m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            readOnlyRootFilesystem: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /var/lib/gitea
              name: pvc-forgejo-data-pvc-c8a47722
      dnsPolicy: ClusterFirst
      hostNetwork: false
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: Always
        runAsNonRoot: true
      serviceAccountName: forgejo-app-service-account-c82cba42
      setHostnameAsFQDN: false
      terminationGracePeriodSeconds: 60
      volumes:
        - name: pvc-forgejo-data-pvc-c8a47722
          persistentVolumeClaim:
            claimName: forgejo-data-pvc-c8a47722
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-app-http-service-c8aab71d
  namespace: forgejo
spec:
  externalIPs: []
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: forgejo-app-deployment-c88e6896
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: forgejo-app-ssh-service-c87dd44f
  namespace: forgejo
spec:
  externalIPs: []
  ports:
    - name: ssh
      port: 22
      protocol: TCP
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: forgejo-app-deployment-c88e6896
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: prod
    cert-manager.io/duration: 2160h
    cert-manager.io/renew-before: 360h
    nginx.ingress.kubernetes.io/proxy-body-size: 500000M
    nginx.ingress.kubernetes.io/proxy-read-timeout: 600s
    nginx.ingress.kubernetes.io/proxy-send-timeout: 600s
  name: forgejo-ingress-c875ead4
  namespace: forgejo
spec:
  ingressClassName: nginx
  rules:
    - host: code.us-drig-1.drigs.org
      http:
        paths:
          - backend:
              service:
                name: forgejo-app-http-service-c8aab71d
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - code.us-drig-1.drigs.org
      secretName: forgejo-forgejo-app-http-service-c8aab71d-tls-c862484b
